[gd_scene load_steps=7 format=3 uid="uid://dnucvmhos2mij"]

[ext_resource type="Shader" path="res://Menus/PauseMenu/PauseMenu.gdshader" id="1_qkm6d"]
[ext_resource type="Script" path="res://Menus/PauseMenu/pause_menu.gd" id="2_uwd54"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_8cv63"]
shader = ExtResource("1_qkm6d")
shader_parameter/lod = 0.0

[sub_resource type="Animation" id="Animation_nln03"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PanelContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_x43mw"]
resource_name = "blur"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 0.8]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PanelContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7c00t"]
_data = {
"RESET": SubResource("Animation_nln03"),
"blur": SubResource("Animation_x43mw")
}

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("2_uwd54")

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_8cv63")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="PanelContainer" type="PanelContainer" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.4
anchor_top = 0.5
anchor_right = 0.6
anchor_bottom = 0.5
offset_left = -60.0
offset_top = -93.0
offset_right = 60.0
offset_bottom = 93.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
metadata/_edit_use_anchors_ = true

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="Resume" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
process_mode = 2
custom_minimum_size = Vector2(100, 10)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_mode = 0
mouse_filter = 1
text = "Resume"

[node name="Restart" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
process_mode = 2
custom_minimum_size = Vector2(100, 10)
layout_mode = 2
size_flags_horizontal = 4
focus_mode = 0
mouse_filter = 1
text = "Restart"

[node name="Settings" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
process_mode = 2
custom_minimum_size = Vector2(100, 10)
layout_mode = 2
size_flags_horizontal = 4
focus_mode = 0
mouse_filter = 1
text = "Settings"

[node name="Menu" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
process_mode = 2
custom_minimum_size = Vector2(100, 10)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_mode = 0
mouse_filter = 1
text = "Menu"

[node name="Quit" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
process_mode = 2
custom_minimum_size = Vector2(100, 10)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_mode = 0
mouse_filter = 1
text = "Quit"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_7c00t")
}

[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/Menu" to="." method="_on_menu_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
